--- a/home.html
+++ b/home.html
@@ -4,27 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Why HTML</title>
-    <link rel="stylesheet" href="style.css">
+    <title>HOME</title>
+    <link rel="stylesheet" href="css/stylet.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;500;700&display=swap" rel="stylesheet">
 </head> 
 <body>
     <section class = "header">
         <nav>
-            <a href="index.html"><img src="images/logo.png" alt="logo"></a>
+            <a href="home.html"><img src="images/logo.png" alt="logo"></a>
             <div class="nav-links">
                 <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="why.html">Why HTML</a> </li>
+                    <li><a href="home.html">Home</a></li>
+                    <li><a href="why HTML.html">Why HTML</a> </li>
                 </ul>
             </div>
         </nav>
-
     </section>
-
-    
-    
+    <section>
+        <div class = "home">
+            <p>ffff</p>
+        </div>
+        <div class = "image">
+        </div>
+    </section>   
 </body>
 </html>
