--- a/home.html
+++ b/home.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HOME</title>
     <link rel="stylesheet" href="css/stylet.css">
+    <link rel="stylesheet" href="css/stylesSatha.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;500;700&display=swap" rel="stylesheet">
@@ -22,12 +23,23 @@
             </div>
         </nav>
     </section>
-    <section>
-        <div class = "home">
-            <p>ffff</p>
-        </div>
-        <div class = "image">
-        </div>
+
+    <br><br><br><br><br>
+    <section >
+
+        <div class="homes">
+            <img id="hero" src="images/hero.jpg" alt="hero image on right">
+      
+        <p style="font-size:70px">HOME</p>
+
+        <p style="font-size: 20px ">HTML markup consist of several key components, including those called tags(and their attributes), 
+          character-based data types, character references and entity references. HTML tags most commonly come in paores like 
+          <span class="tag-highlighted">&lt;<b>h1</b>&gt;</span> and <span class="tag-highlighted">&lt;<b>/h1</b>&gt;</span>,
+          although some recodesent empty elements and so are unpaired, for example 
+          <span class="tag-highlighted">&lt;<b>img</b>&gt;. The first tag in such a pair is the start tag,
+          and the second is end tag(they aslo called <i> opening tags</i>)and <i>closing tags</i>). </p>
+        <a id = "button" href="why HTML.html" target="_blank"> <b>Why HTML?</b></a>
+      </div>
     </section>   
 </body>
 </html>
