--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HOME</title>
-    <link rel="stylesheet" href="css/stylet.css">
+    <link rel="stylesheet" href="css/style_epa.css">
     <link rel="stylesheet" href="css/stylesSatha.css">
     <link rel="stylesheet" href="css/styleCharith.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -33,7 +33,7 @@
         <div class="homes">
             <img id="hero" src="images/hero.jpg" alt="hero image on right">
 
-            <p style="font-size:70px">HOME</p>
+            <p style="font-size:70px;font-weight:lighter">HOME</p>
 
             <p style="font-size: 20px ">HTML markup consist of several key components, including those called tags(and
                 their attributes),
@@ -53,8 +53,8 @@
 
         <div id="charith">
             <div id="center">
-                <p style="font-size: 22px; margin-bottom:0px;"><strong>Sample Table</strong></p>
-                Following Table uses <mark>colspan</mark> and <mark>rowspan</mark> attributes inside
+                <p style="font-size: 22px; margin-bottom:0px; text-align:justify"><strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Sample Table</strong></p>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Following Table uses <mark>colspan</mark> and <mark>rowspan</mark> attributes inside
                 <mark><strong>&lt;td&gt;</strong></mark> to merge two or more cells<br>
             </div>
             <div>
