add a space between satha s' part.
1)  table eke caption eka sathage kallen thawa tikak yatata damma.
2)   "simple table" kalla maddata damma.
     mn issella dapu eketh mn eka karala thibbe uba eka wenas karala..width eka  100% da..
🤔🤔 mokak hari awlk hadanna da eka wenas kare.

--- a/home.html
+++ b/home.html
@@ -35,13 +35,8 @@
 
             <p style="font-size:70px;font-weight:lighter">HOME</p>
 
-            <p style="font-size: 20px ">HTML markup consist of several key components, including those called tags(and
-                their attributes),
-                character-based data types, character references and entity references. HTML tags most commonly come in
-                paores like
-                <span class="tag-highlighted">&lt;<b>h1</b>&gt;</span> and <span
-                    class="tag-highlighted">&lt;<b>/h1</b>&gt;</span>,
-                although some recodesent empty elements and so are unpaired, for example
+            <p style="font-size: 20px ">HTML markup consist of several key components, including those called tags(and their attributes), character-based data types, character references and entity references. HTML tags most commonly come in paores like
+                <span class="tag-highlighted">&lt;<b>h1</b>&gt;</span> and <span class="tag-highlighted">&lt;<b>/h1</b>&gt;</span>, although some recodesent empty elements and so are unpaired, for example
                 <span class="tag-highlighted">&lt;<b>img</b>&gt;. The first tag in such a pair is the start tag,
                     and the second is end tag(they aslo called <i> opening tags</i>)and <i>closing tags</i>).
             </p>
@@ -53,8 +48,7 @@
 
         <div id="charith">
             <div id="center">
-                <p style="font-size: 22px; margin-bottom:0px; text-align:justify"><strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Sample Table</strong></p>
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Following Table uses <mark>colspan</mark> and <mark>rowspan</mark> attributes inside
+                <p id="tbleheader" style="font-size: 22px; margin-bottom:0px;"><strong>Sample Table</strong></p>Following Table uses <mark>colspan</mark> and <mark>rowspan</mark> attributes inside
                 <mark><strong>&lt;td&gt;</strong></mark> to merge two or more cells<br>
             </div>
             <div>
