remove inline css of the table
successfully removed. and add it as a id into my css file.

--- a/home.html
+++ b/home.html
@@ -48,7 +48,7 @@
 
         <div id="charith">
             <div id="center">
-                <p id="tbleheader" style="font-size: 22px; margin-bottom:0px;"><strong>Sample Table</strong></p>Following Table uses <mark>colspan</mark> and <mark>rowspan</mark> attributes inside
+                <p id="tbleheader"><strong>Sample Table</strong></p>Following Table uses <mark>colspan</mark> and <mark>rowspan</mark> attributes inside
                 <mark><strong>&lt;td&gt;</strong></mark> to merge two or more cells<br>
             </div>
             <div>
