--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 <body>
     <section class="header">
         <nav>
-            <a href="home.html"><img src="images/logo.png" alt="logo"></a>
+            <a href="index.html"><img src="images/logo.png" alt="logo"></a>
             <div class="nav-links">
                 <ul>
-                    <li><a href="home.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="why HTML.html">Why HTML</a> </li>
                 </ul>
             </div>
