few changes to front page

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="homes">
             <img id="hero" src="images/hero.jpg" alt="hero image on right">
 
-            <p style="font-size:70px;font-weight:lighter">HOME</p>
+            <p id="hometext">HOME</p>
 
             <p style="font-size: 20px ">HTML markup consist of several key components, including those called tags(and their attributes), character-based data types, character references and entity references. HTML tags most commonly come in paores like
                 <span class="tag-highlighted">&lt;<b>h1</b>&gt;</span> and <span class="tag-highlighted">&lt;<b>/h1</b>&gt;</span>, although some recodesent empty elements and so are unpaired, for example
