commenting and styling done

--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<!--Epa's Part starts here It includes the header-->
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HOME</title>
+
+    <!--Linking the stylesheets created and also the font families-->
+
     <link rel="stylesheet" href="css/style_epa.css">
     <link rel="stylesheet" href="css/stylesSatha.css">
     <link rel="stylesheet" href="css/styleCharith.css">
@@ -15,7 +20,7 @@
 </head>
 
 <body>
-    <section class="header">
+    <section class="header"> <!--header part-->
         <nav>
             <a href="index.html"><img src="images/logo.png" alt="logo"></a>
             <div class="nav-links">
@@ -28,30 +33,33 @@
     </section>
 
     <br><br>
+
+    <!--Epa's Part ends here-->
+
+    <!--Avishka's part stats here it includes the home part-->
     <div id="satha">
 
         <div class="homes">
+            <!--Inserting the image-->
             <img id="hero" src="images/hero.jpg" alt="hero image on right">
 
+            <!--inserting the HOME text part-->
             <p id="hometext">HOME</p>
-
-            <p style="font-size: 20px ">HTML markup consist of several key components, including those called tags(and
-                their attributes), character-based data types, character references and entity references. HTML tags
-                most commonly come in paores like
-                <span class="tag-highlighted">&lt;<b>h1</b>&gt;</span> and <span
-                    class="tag-highlighted">&lt;<b>/h1</b>&gt;</span>, although some recodesent empty elements and so
-                                                                        are unpaired, for example
-                <span class="tag-highlighted">&lt;<b>img</b>&gt;. The first tag in such a pair is the start tag,
-                                            and the second is end tag(they aslo called <i> opening tags</i>)and <i>closing tags</i>).
-            </p>
+            <p style="font-size: 20px ">HTML markup consist of several key components, including those called tags(and their attributes), character-based data types, character references and entity references. HTML tags most commonly come in paores like
+                <span class="tag-highlighted">&lt;<b>h1</b>&gt;</span> and <span class="tag-highlighted">&lt;<b>/h1</b>&gt;</span>, although some recodesent empty elements and soare unpaired, for example
+                <span class="tag-highlighted">&lt;<b>img</b>&gt;. The first tag in such a pair is the start tag, and the second is end tag(they aslo called <i> opening tags</i>)and <i>closing tags</i>).</p>
             <a id="button" href="why HTML.html" target="_blank"> <b>Why HTML?</b></a>
         </div>
     </div>
+    <!-- Avishka's part ends here -->
+    
 
+    <!--Charith's part starts here and it includes the table -->
+    
     <section>
 
         <div id="charith">
-            <div id="center">
+            <div id="center"> <!--creating the table-->
                 <p id="tbleheader"><strong>Sample Table</strong></p>Following Table uses <mark>colspan</mark> and
                 <mark>rowspan</mark> attributes inside
                 <mark><strong>&lt;td&gt;</strong></mark> to merge two or more cells<br>
