--- a/why HTML.html
+++ b/why HTML.html
@@ -112,7 +112,7 @@
 
         <div id="thisura">
 
-            <h1 id="form-heading">Sample Form</h1>
+            <h1 id="form-heading">Sample Form</h1>    <!--Form-->
             <div class="register">
                 <form>
                     <label for="username" class="labels">Name: </label>
@@ -132,7 +132,7 @@
                     <label for="female" class="labels-mid">Female</label>
                     <br>
                     <br>
-                    <label for="year" class="labels">Acedamic year: </label>
+                    <label for="year" class="labels">Acedamic year: </label>   <!--Drop down table-->
                     <select id="year" name="year">
                         <option>Select from list</option>
                         <option value="2014">2014</option>
